# OS-Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-entrypoint.sh  entrypoint.sh  frontend.py  gradio_app.py  pyproject.toml  requirements.txt  run.py  run_ws.py  server.py  start_services.py  test.txt
agent/: __init__.py  __main__.py  api.py  config.py  db.py  memory.py  server.py  simple.py  solo.py  static_server.py  team.py  vm.py
agent/chat/: __init__.py  messages.py  schema.py  session.py  state.py
agent/config/: __init__.py
agent/db/: __init__.py
agent/server/: __init__.py  __main__.py  endpoints.py  websocket.py
agent/sessions/: solo.py  team.py
agent/tools/: __init__.py  memory.py  terminal_session.py
agent/utils/: __init__.py  debug.py  helpers.py  interactive.py  logging.py  memory.py  (+3 more)
api/: __init__.py  __main__.py  api.py  document_service.py  main.py
api_app/: __init__.py  __main__.py
backend/: .gitignore  README.md  main.py
bot/: __init__.py  __main__.py  config.py  connection.py  discord_bot.py  message_utils.py  ws_api.py  ws_client.py
cli-go/: README.md  go.mod  main.go
cli_app/: README.md  main.py
docker/: Dockerfile.vm
frontend/: .env.local.example  README.md  api.js  app.js  gradio_app.py  index.html  package-lock.json  package.json  styles.css
frontend_legacy/: package-lock.json  package.json
mac_gui/: api_client.py  app.py
src/: __init__.py  agent_comm.py  api.py  chat.py  cli.py  config.py  db.py  document_service.py  history.py  log.py  schema.py  security.py  team.py  tools.py  utils.py  vm.py
(+60 files in other folders)
