[project]
name = "llmos-agent"
version = "0.1.0"
description = "Asynchronous chat agent with Ollama integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama",
    "peewee",
    "discord.py",
    "colorama",
    "python-dotenv",
    "openai-whisper",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "bot*"]
